[package]
name = "hyperloop"
version = "0.1.0"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.log]
version = "0.4"
default-features = false
