[package]
name = "hyperloop"
version = "0.1.0"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
edition = "2018"

[dependencies]
futures = {version = "0.3.15", default-features = false}
embedded-time = "0.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.heapless]
version = "0.7"

[dependencies.hyperloop-macros]
path = "../hyperloop-macros"
