[package]
name = "hyperloop"
version = "0.1.0"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
edition = "2021"

[dependencies]
futures = {version = "0.3.15", default-features = false}
embedded-time = "0.12.0"
atomig = {version = "0.3.2", features = ["derive"]}
hyperloop-priority-queue = {path = "../hyperloop-priority-queue"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.hyperloop-macros]
path = "../hyperloop-macros"

[dev-dependencies.crossbeam-queue]
version = "0.3"
